# remote-atoms

./: .gitignore  README.md
apps/atmospherics/: .clangd  CMakeLists.txt  prj.conf
apps/atmospherics/boards/arm/: stm32f0_atmos.overlay
apps/atmospherics/inc/: atmos_app.h  atmos_gpio.h  bme_sensor.h  display.h  i2c.h  scd41_sensor.h  sgp_sensor.h  sps30_sensor.h  test.h
apps/atmospherics/inc/fonts/: cfb_font_1016.h
apps/atmospherics/src/: atmos_app.c  atmos_gpio.c  bme_sensor.c  display.c  i2c.c  main.c  scd41_sensor.c  sgp_sensor.c  sps30_sensor.c  test.c
atmos-mod/drivers/: CMakeLists.txt  Kconfig
atmos-mod/drivers/display/: CMakeLists.txt  Kconfig.sh1107  sh1107.c  sh1107.h
atmos-mod/drivers/sensor/: CMakeLists.txt  Kconfig
atmos-mod/drivers/sensor/scd41/: Kconfig  scd41.c
atmos-mod/drivers/sensor/sps30/: CMakeLists.txt  Kconfig  sps30.c  sps30.h
atmos-mod/dts/bindings/display/: sinowealth,sh1107.yaml
atmos-mod/dts/bindings/sensor/: sensirion,sps30.yaml
boards/arm/stm32f0_atmos/: Kconfig.board  Kconfig.defconfig  board.cmake  stm32f0_atmos.dts  stm32f0_atmos.yaml  stm32f0_atmos_defconfig
module/: CMakeLists.txt
module/drivers/sensor/: Kconfig
module/drivers/sensor/scd41/: CMakeLists.txt  Kconfig  scd41.c  scd41.h
module/dts/bindings/sensor/: sensirion,scd41.yaml
modules/drivers/sensor/scd41/: scd41.c  scd41.h
openocd/: stm32f0.cfg
scripts/: manual_flash.sh  ocd_connect.sh  west_build.sh  west_flash.sh  west_menuconfig.sh
stm32f0/: west.yml
