cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(atmos)

target_sources(app PRIVATE
  src/main.c
  src/atmos_app.c
  src/i2c.c
  src/bme_sensor.c
  src/sgp_sensor.c
  src/scd41_sensor.c
  src/display.c
)

target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/inc)

